[package]
name = "asqlite"
version = "1.2.0"
edition = "2021"
rust-version = "1.82.0"
resolver = "2"

description = "SQLite wrapper using async Rust"

categories = ["database"]
keywords = ["async", "database", "sql", "sqlite"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/nicbn/asqlite"

[features]
default = []
bundled = ["libsqlite3-sys/bundled"]

[dependencies]
futures-lite = "2.6.0"
libsqlite3-sys = "0.34.0"
oneshot = "0.1.11"
rustc-hash = "2.1.1"

[dev-dependencies]
futures = "0.3.31"
rusqlite = "0.36.0"
tokio = { version = "1.44.2", features = [
    "fs",
    "macros",
    "rt",
    "rt-multi-thread",
] }
tokio-test = "0.4.4"
